Updating new version of Lab2_1.ipynb

--- a/Lab2_1.ipynb
+++ b/Lab2_1.ipynb
@@ -9,20 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as py\n",
     "import matplotlib.pyplot as plt\n",
-    "import statistics\n",
+    "import statistics \n",
     "import seaborn as sn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -231,12 +231,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. (print all graphs) Finally plot the data using: Univariate Plots, Density Plots, Skew, Correlation Plots, Scatter Plots."
+    "### 4. Finally plot the data using: Univariate Plots, Density Plots, Skew, Correlation Plots, Scatter Plots."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -329,13 +329,11 @@
    "source": [
     "##### https://archive.ics.uci.edu/ml/datasets/Bank+Marketing\n",
     "\n",
-    "##### 1. Begining with the density/skew plot of the age columns. My understanding is that there are very litle to none outliers in the age columns that i can see. The density graph is positively skewed towards 65 years which is retirement age. Looking at the dataset itself with a jobs column it doesnt seem there is anyone working at an excessively old age. Hence why there is no outliers in the age column. No missing data in the age columns either.\n",
+    "##### 1. Beginning with the density/skew plot of the age columns. My understanding is that there are very little to no outliers in the age columns that I can see. The density graph is positively skewed towards 65 years which is retirement age. Looking at the dataset itself with a job’s column it doesn’t seem there is anyone working at an excessively old age. Hence why there is no outliers in the age column. No missing data in the age columns either.\n",
     "\n",
-    "##### 2. From the histogram I can see there is missing data there is a couple of hundred people with unknown ocupations. Over 16000 of people who as Managers. Under 2000 Technicians, under 10000 Entrepeneurs etc. From the graph there seems to be no outliers.\n",
+    "##### 2. From the histogram I can see there is missing data there is a couple of hundred people with unknown occupations. Over 16000 of people who as Managers. Under 2000 Technicians, under 10000 Entrepreneurs etc. From the graph there seems to be no outliers.\n",
     "\n",
-    "##### 3. Scatter plot for age and duration. To clarify duration is the last contact duration of the phone call in seconds I compared it to the age column to see if Age of the employee had any influence on the duration of the phone call. My conclusion is from my scatter plot the calls are typically the same duration and age has no influence on whether the call would be very brief/long.\n",
-    "\n",
-    "##### 4. "
+    "##### 3. Scatter plot for age and duration. To clarify duration is the last contact duration of the phone call in seconds I compared it to the age column to see if Age of the employee had any influence on the duration of the phone call. My conclusion is from my scatter plot the calls are typically the same duration and age has no influence on whether the call would be very brief/long.\n"
    ]
   }
  ],
